# word2vec

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
doc/static/: extra.css
src/: common.c  common.h  train.c  train.h  vocab.c  vocab.h  w2vio.c  w2vio.h  word2vec.c
tests/: tap-driver.sh  test_0.0.expected  test_0.0.in  test_0.test  test_1.0.expected  test_1.0.in  test_1.1.expected  test_1.test  test_2.0.expected  test_2.0.in  test_2.1.expected  test_2.test  test_3.0.expected  test_3.test
